<resources>
    <string name="app_name">大学生校园防诈骗知识学习交流</string>
    <string name="activity_mian_study_str">学习</string>
    <string name="activity_main_case_str">案例</string>
    <string name="activity_main_mine_str">个人</string>
    <string name="avatar">avatar</string>
    <string name="comment_send_success">评论已发布</string>
    <string name="comment_send_fail">评论发布失败</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user_logout">未登录</string>
    <string name="article_knowledge_str">文章学习</string>
    <string name="video_knowledge_str">视频学习</string>
    <string name="comment_edit_hit_text">发表您的评论</string>
    <string name="activity_main_search_str">搜索</string>
    <string name="menu_home_bnv_qa_str">问答</string>
    <string name="menu_home_bnv_test_str">自测</string>
</resources>